--- a/Packaging/Properties/Resources.resx
+++ b/Packaging/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="sys52" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sys52.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Packaging_3D" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Packaging_3D.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="trackSpeed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\trackSpeed.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,10 +139,10 @@
   <data name="product" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\3.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="093650182" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_093650182" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\093650182.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2014-03-12_101049" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_101049" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\2014-03-12_101049.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sys" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -148,7 +151,7 @@
   <data name="SafeConfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SafeConfig.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="093650189" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_093650189" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\093650189.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Pallet" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -157,10 +160,10 @@
   <data name="product1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Packaging_3D" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Packaging_3D.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_145919" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2015-05-13_145919.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="093650216" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_093650216" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\093650216.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="system4" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -168,16 +171,17 @@
   </data>
   <data name="sys6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sys6.JPG;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data><data name="093650191" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  </data>
+  <data name="_093650191" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\093650191.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Axis7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Axis7.PNG;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="_13" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\13.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2015-05-13_145919" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2015-05-13_145919.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="_145551" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2015-05-13_145551.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
